<resources>
    <string name="app_name">Q家</string>
    <string name="message_permission_always_failed">您需要开启</string>
    <string name="message_permission_rationale">您需要以下权限</string>
    <string name="connect_timeout">设备连接超时</string>
    <string name="ota_error">更新设备失败，请检查蓝牙连接</string>
    <string name="update_retry">重试</string>
    <string name="update_cancel">取消</string>
    <string name="updating">更新中,请稍后</string>
    <string name="ota_title">硬件更新</string>
    <string name="about_company_version">v1.0</string>
    <string name="about_company_grade">去评分</string>
    <string name="about_company_privacy">使用条款和隐私政策</string>
    <string name="device_control_title">智能电灯</string>
    <string name="device_control_off">已关闭</string>
    <string name="device_control_on">已开启</string>
    <string name="device_control_setting_function">使用须知</string>
    <string name="device_control_setting_log">日志</string>
    <string name="device_control_setting_password">设置密码</string>
    <string name="device_control_setting_timing">定时</string>
    <string name="device_control_setting_nickname">修改名称</string>
    <string name="device_control_setting_pic">更换图标</string>
    <string name="device_control_setting_general">通用设置</string>
    <string name="device_control_setting_type">设备类型</string>
    <string name="device_control_setting_update">固件更新</string>
    <string name="device_control_setting_delete">删除设备</string>
    <string name="device_nickname_update_name">请为产品命名哦</string>
    <string name="device_nickname_input">请在此输入</string>
    <string name="device_title">用户设备</string>
    <string name="device_finding">已经发现设备…</string>
    <string name="device_scan">重新扫描</string>
    <string name="home_degree">℃</string>
    <string name="home_bulb">灯泡</string>
    <string name="user_notebook">用户手册</string>
    <string name="user_faq">FAQ</string>
    <string name="user_about_company">关于科微多</string>
    <string name="user_clear_cache">清理缓存</string>
    <string name="device_item_state">状态：</string>
    <string name="device_item_off_connect">未连接</string>
    <string name="device_item_on_connect">已连接</string>
    <string name="empty_view_message">没有可连设备</string>
    <string name="empty_view_button">空数据</string>
    <string name="error_view_message">网络出错了</string>
    <string name="error_view_button">出错</string>
    <string name="loading_view_message">加载中</string>
    <string name="loading_view_button">加载</string>
    <string name="device_control_setting_title">设备设置</string>
    <string name="dialog_confirm">确定</string>
    <string name="dialog_cancle">取消</string>
    <string name="device_scaning">扫描中…</string>
    <string name="device_stop_scan">停止扫描</string>
    <string name="home_unknowe_city">未知</string>
    <string name="about_company_title">关于科微多</string>
    <string name="user_delete_cache_title">您确定要删除这些缓存吗</string>
    <string name="exit_app">再按一次退出程序</string>
    <string name="device_log_title">操作日志</string>
    <string name="device_log_cancle_allselete">取消全选</string>
    <string name="device_log_allselete">全选</string>
    <string name="device_log_delete_one">删除后不可恢复，是否删除该条目？</string>
    <string name="device_log_delete_all_one">删除后不可恢复，是否删除这</string>
    <string name="device_log_delete_all_two">个条目？</string>
    <string name="device_log_cancle">取消</string>
    <string name="device_log_edit">编辑</string>
    <string name="device_log_popuwindow_prompt">提示</string>
    <string name="device_log_popuwindow_close">关闭</string>
    <string name="device_log_popuwindow_confirm">确定</string>
    <string name="device_log_bottom_selete">已选择</string>
    <string name="device_log_bottom_delete">删除</string>
    <string name="device_log_bottom_allselete">全选</string>
    <string name="device_reconnection">连接已中断，正在重连</string>
    <string name="device_connect_fail">连接失败</string>
    <string name="device_connect_success">连接成功</string>
    <string name="device_initiative_break_off_connect">您主动中断连接</string>
    <string name="device_passive_break_off_connect">被动中断连接</string>
    <string name="device_not_connect">蓝牙未连接</string>
    <string name="todo">TODO</string>
    <string name="device_control_general_setting">通用设置</string>
    <string name="device_set_type_save">保存</string>
    <string name="device_timing_save">保存</string>
    <string name="device_timing_repetition">重复</string>
    <string name="device_timing_everyday">每天</string>
    <string name="device_timing_operation">操作</string>
    <string name="device_timing_open">开启</string>
    <string name="device_update_nickname_tip">请输入名称，不超过10个字</string>
    <string name="device_update_nickname_confirm">确定</string>
    <string name="device_update_pic_save">保存</string>
    <string name="device_update_light">电灯</string>
    <string name="device_network_wifi_name">WIFI名称</string>
    <string name="device_network_wifi_strength">WIFI强度</string>
    <string name="device_network_wifi_rssi">RSSI</string>
    <string name="device_network_wifi_mode">当前模式</string>
    <string name="device_network_wifi_ip_address">IP地址</string>
    <string name="device_network_wifi_mac_address">MAC地址</string>
    <string name="robot_consumable_maintain_title">耗材&amp;维护</string>
    <string name="robot_consumable_maintain_immediately_buy">立即购买</string>
    <string name="robot_consumable_maintain_example_percent">94%</string>
    <string name="robot_consumable_maintain_example_part_name">滤网</string>
    <string name="robot_consumable_maintain_example_time">预计剩余141小时更换</string>
    <string name="robot_setting_timing_title">设置定时</string>
    <string name="robot_setting_timing_save">保存</string>
    <string name="robot_setting_timing_state">重复</string>
    <string name="robot_setting_timing_default_state">清扫一次</string>
    <string name="robot_setting_timing_open_time">开启时间</string>
    <string name="robot_setting_timing_default_time">11:01</string>
    <string name="robot_setting_timing_mode">清扫模式</string>
    <string name="robot_setting_timing_default_mode">标准</string>
    <string name="robot_setting_timing_hour">时</string>
    <string name="robot_setting_timing_minute">分</string>
    <string name="robot_setting_timing_item_open_time">开启时间</string>
    <string name="robot_setting_timing_item_example_time">今天 12:01</string>
    <string name="robot_setting_timing_item_example_content">执行一次 标准</string>
    <string name="robot_sweep_recode_title">清扫记录</string>
    <string name="robot_sweep_recode_total_time">总时长 / 分</string>
    <string name="robot_sweep_recode_total_area">总清扫 / 平</string>
    <string name="robot_sweep_recode_total_num">总次数 / 次</string>
    <string name="robot_sweep_recode_empty_text">_ _</string>
    <string name="robot_sweep_recode_example_time">09月10日 15:00</string>
    <string name="robot_sweep_recode_example_content">清扫 1㎡ 丨 工作 1min</string>
    <string name="robot_sweep_recode_map_details">地图详情</string>
    <string name="robot_voice_packet_title">语音包</string>
    <string name="robot_voice_packet_example_name">标准普通话版(默认)</string>
    <string name="robot_voice_packet_example_content">经典女声</string>
    <string name="robot_voice_packet_usage">使用</string>
    <string name="add_device_nearby_device">附近设备</string>
    <string name="add_device_manual">手动添加</string>
    <string name="add_device_pulldown_retry_scan">下拉进行重新扫描</string>
    <string name="add_home_home_name_text">家庭名称</string>
    <string name="add_home_input_home_name">请输入家庭名称</string>
    <string name="add_home_home_location">家庭位置</string>
    <string name="add_home_selete_home_location">请选择家庭的位置</string>
    <string name="add_home_theme_wallpaper">主题壁纸</string>
    <string name="add_home_confirm">确 定</string>
    <string name="add_room_details_cancel">取消</string>
    <string name="add_room_details_title">添加房间</string>
    <string name="add_room_details_save">保存</string>
    <string name="add_room_details_room_name">房间名称</string>
    <string name="add_room_details_room_pic">房间图标</string>
    <string name="add_room_details_selete_device_move">已选中0个设备移动到该房间</string>
    <string name="device_ble_timing_add_timing">添加定时</string>
    <string name="device_share_qevdo_account_content">快来共享设备，和家人一起享受智能生活吧！</string>
    <string name="device_share_qevdo_account_input_hint">手机号码/邮箱/科微多账号</string>
    <string name="device_share_qevdo_account_confirm">确定</string>
    <string name="device_splash_title">新手引导</string>
    <string name="device_wifi_setting_cancel">取消</string>
    <string name="device_wifi_setting_title">设置网络</string>
    <string name="device_wifi_setting_input_wifi_password">请输入家中的Wi-Fi密码</string>
    <string name="device_wifi_setting_hint_password">密码</string>
    <string name="device_wifi_setting_current_wifi">当前Wi-Fi:</string>
    <string name="device_wifi_setting_change_network">更换网络</string>
    <string name="device_wifi_setting_confirm">确 认</string>
    <string name="device_wifi_setting_support_network">仅支持2.4G Wi-Fi网络</string>
    <string name="device_wifi_setting_connecting">正在连接</string>
    <string name="device_wifi_setting_near_tip">路由器、手机、设备尽量靠的近</string>
    <string name="device_wifi_setting_find_device">找到设备</string>
    <string name="device_wifi_setting_device_register">设备注册到服务器</string>
    <string name="device_wifi_setting_init">设备初始化</string>
    <string name="family_share_details_add_share">添加共享</string>
    <string name="home_setting_home_name">家庭名称</string>
    <string name="home_setting_home_location">家庭位置</string>
    <string name="home_setting_room_manage">房间管理</string>
    <string name="home_setting_theme_wallpaper">主题壁纸</string>
    <string name="home_setting_delete_home">删除家庭</string>
    <string name="login_china">中国大陆</string>
    <string name="login_hint_account">手机号/账号/邮箱</string>
    <string name="login_hint_password">密码</string>
    <string name="login_login">登 录</string>
    <string name="login_forget_password">忘记密码？</string>
    <string name="login_register">现在注册</string>
    <string name="notification_capacity_title">新建智能</string>
    <string name="notification_capacity_complete">完成</string>
    <string name="notification_capacity_if">如果</string>
    <string name="notification_capacity_continue_add">继续添加</string>
    <string name="notification_capacity_make">就执行</string>
    <string name="notification_capacity_time_effect">生效时间段</string>
    <string name="notification_capacity_example_time_effect">全天</string>
    <string name="qsone_control_device_disconnect">设备未连接，下拉连接设备</string>
    <string name="qsone_control_switch">日志</string>
    <string name="qsone_control_sound">语音</string>
    <string name="qsone_control_timing">定时</string>
    <string name="qsone_timing_save">保存</string>
    <string name="qsone_timing_time_text">0小时0分钟后</string>
    <string name="qsone_timing_hour">小时</string>
    <string name="qsone_timing_minute">分钟</string>
    <string name="qsone_timing_repeat">操作</string>
    <string name="qsone_timing_open_light">打开灯泡</string>
    <string name="reset_password_reset_password">重置密码</string>
    <string name="reset_password_tip_one">请输入注册的手机号码、邮箱地址或科微多账号:</string>
    <string name="reset_password_hint_account">邮箱/手机号码/账号</string>
    <string name="reset_password_tip_two">用户输入手机号时请正确选择区域前缀，如台湾：+8869****，香港：+8526****</string>
    <string name="reset_password_help">帮助</string>
    <string name="reset_password_next">下一步</string>
    <string name="qstwo_sound_control_text_one">你可以这样说：</string>
    <string name="qstwo_sound_control_text_two">“打开灯”</string>
    <string name="qstwo_sound_control_text_three">“我想要打开灯”</string>
    <string name="qstwo_sound_control_text_four">“我想要关闭灯”</string>
    <string name="qstwo_sound_control_text_five">“打开全部灯”</string>
    <string name="reset_password_four_reset_password">重置密码</string>
    <string name="reset_password_four_text_one">请重设您的账号密码</string>
    <string name="reset_password_four_hint_new_password">请输入新密码</string>
    <string name="reset_password_four_hint_confirm_password">请输入确认密码</string>
    <string name="reset_password_four_text_two">密码长度6–16位,数字和字母必须都有</string>
    <string name="reset_password_four_text_three">提 交</string>
</resources>