<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/device_background_four">

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x30"
        android:layout_marginTop="@dimen/y80"
        android:padding="5dp"
        android:text="@string/device_wifi_setting_cancel"
        android:textColor="@color/white"
        android:textSize="15sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y80"
        android:padding="5dp"
        android:text="@string/device_wifi_setting_title"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <RelativeLayout
        android:id="@+id/rl_setting_wifi_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/x80"
        android:layout_marginRight="@dimen/x80"
        android:background="@drawable/circle_white_five"
        android:visibility="visible">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y50"
            android:padding="5dp"
            android:text="@string/device_wifi_setting_input_wifi_password"
            android:textColor="@color/home_setting_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y80"
            android:layout_below="@+id/tv_title"
            android:layout_marginLeft="@dimen/x30"
            android:layout_marginRight="@dimen/x30"
            android:layout_marginTop="@dimen/y50"
            android:background="@drawable/login_edittext_shape">

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x40"
                android:src="@mipmap/login_password_unselete"
                tools:ignore="RtlHardcoded" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/x30"
                android:layout_toRightOf="@+id/iv_password"
                android:background="@null"
                android:hint="@string/device_wifi_setting_hint_password"
                android:inputType="textPassword"
                android:textColor="@color/app_title"
                android:textSize="13sp"
                tools:ignore="RtlHardcoded" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_wifi_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rl_password"
            android:layout_marginLeft="@dimen/x40"
            android:layout_marginTop="@dimen/y30"
            android:text="@string/device_wifi_setting_current_wifi"
            android:textColor="@color/home_setting_text_two"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_change_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/rl_password"
            android:layout_marginRight="@dimen/x40"
            android:layout_marginTop="@dimen/y30"
            android:text="@string/device_wifi_setting_change_network"
            android:textColor="@color/room_manage_add_text"
            android:textSize="14sp"
            tools:ignore="RtlHardcoded" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_below="@+id/tv_wifi_name"
            android:layout_marginTop="@dimen/y30"
            android:background="@color/home_setting_text_two" />

        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/y80"
            android:layout_below="@+id/view_line"
            android:gravity="center"
            android:text="@string/device_wifi_setting_confirm"
            android:textColor="@color/room_manage_add_text"
            android:textSize="16sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_setting_wifi_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/y30"
        android:text="@string/device_wifi_setting_support_network"
        android:textColor="@color/white" />

    <RelativeLayout
        android:id="@+id/rl_device_connect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="@dimen/x80"
        android:layout_marginRight="@dimen/x80"
        android:background="@drawable/circle_white_five"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_title_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y50"
            android:padding="5dp"
            android:text="@string/device_wifi_setting_connecting"
            android:textColor="@color/home_setting_text"
            android:textSize="16sp"
            android:textStyle="bold" />

        <com.qvd.smartswitch.widget.WaveProgress
            android:id="@+id/wave_progress_bar"
            android:layout_width="@dimen/x250"
            android:layout_height="@dimen/y250"
            android:layout_below="@+id/tv_title_two"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y30"
            app:circleColorprogress="@color/add_home_background"
            app:darkWaveAnimTime="1000"
            app:darkWaveColor="@color/dark"
            app:lightWaveAnimTime="2000"
            app:lightWaveColor="@color/poster_details"
            app:lightWaveDirect="R2L"
            app:lockWave="true"
            app:maxValue="100"
            app:valueSize="35sp"
            app:waveHeight="15dp"
            app:waveNum="1" />

        <TextView
            android:id="@+id/tv_text_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/wave_progress_bar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y50"
            android:text="@string/device_wifi_setting_near_tip"
            android:textColor="@color/home_manage_text"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/tv_find_device"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_text_two"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/y30"
            android:text="@string/device_wifi_setting_find_device"
            android:textColor="@color/home_setting_text_two"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_device_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_find_device"
            android:layout_centerHorizontal="true"
            android:text="@string/device_wifi_setting_device_register"
            android:textColor="@color/home_setting_text_two"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_device_init"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_device_register"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/y50"
            android:text="@string/device_wifi_setting_init"
            android:textColor="@color/home_setting_text_two"
            android:textSize="13sp" />


    </RelativeLayout>


</RelativeLayout>