<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/add_room_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80">

        <ImageView
            android:id="@+id/iv_common_actionbar_goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x20"
            android:padding="5dp"
            android:src="@mipmap/actionbar_goback"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_common_actionbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/app_title"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y80"
        android:text="@string/reset_password_reset_password"
        android:textColor="@color/home_setting_text"
        android:textSize="18sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x50"
        android:layout_marginTop="@dimen/y50"
        android:text="@string/reset_password_tip_one"
        android:textColor="@color/home_setting_text_three"
        android:textSize="12sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/et_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x50"
        android:layout_marginTop="@dimen/y40"
        android:backgroundTint="@color/home_setting_text_two"
        android:hint="@string/reset_password_hint_account"
        android:paddingBottom="@dimen/y40"
        android:textColor="@color/home_setting_text"
        android:textSize="14sp"
        android:inputType=""
        tools:targetApi="lollipop" />

    <TextView
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x50"
        android:layout_marginTop="@dimen/y40"
        android:gravity="left"
        android:text="@string/reset_password_tip_two"
        android:textColor="@color/home_setting_text_two"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tv_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="@dimen/x50"
        android:text="@string/reset_password_help"
        android:textColor="@color/blue_background"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tv_next"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x50"
        android:layout_marginTop="@dimen/y30"
        android:background="@drawable/login_text_background"
        android:gravity="center"
        android:text="@string/reset_password_next"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>