<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/add_room_background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80">

        <ImageView
            android:id="@+id/iv_common_actionbar_goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/x20"
            android:padding="5dp"
            android:src="@mipmap/actionbar_goback"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/tv_common_actionbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/app_title"
            android:textSize="15sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/y80"
        android:text="@string/reset_password_four_reset_password"
        android:textColor="@color/home_setting_text"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginTop="@dimen/y40"
        android:text="@string/reset_password_four_text_one"
        android:textColor="@color/home_setting_text_three"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />

    <EditText
        android:id="@+id/et_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x50"
        android:layout_marginTop="@dimen/y40"
        android:backgroundTint="@color/home_setting_text_two"
        android:hint="@string/reset_password_four_hint_new_password"
        android:inputType="textPassword"
        android:paddingBottom="@dimen/y40"
        android:textColor="@color/home_setting_text"
        android:textSize="14sp"
        tools:targetApi="lollipop" />

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x50"
        android:layout_marginTop="@dimen/y40"
        android:backgroundTint="@color/home_setting_text_two"
        android:hint="@string/reset_password_four_hint_confirm_password"
        android:inputType="textPassword"
        android:maxLength="16"
        android:paddingBottom="@dimen/y40"
        android:textColor="@color/home_setting_text"
        android:textSize="14sp"
        tools:targetApi="lollipop" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginTop="@dimen/y30"
        android:text="@string/reset_password_four_text_two"
        android:textColor="@color/home_content_text"
        android:textSize="13sp"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/tv_commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y80"
        android:layout_marginLeft="@dimen/x50"
        android:layout_marginRight="@dimen/x50"
        android:layout_marginTop="@dimen/y60"
        android:background="@drawable/login_text_selector"
        android:gravity="center"
        android:text="@string/reset_password_four_text_three"
        android:textColor="@color/white"
        android:textSize="14sp" />


</LinearLayout>